--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql
+  encoding: utf-8
+  reconnect: false
+  database: iej
+  pool: 5
+  username: iej
+  password: jessicacrew
